[package]
name = "cargo-linked"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "List actually used crates."
repository = "https://github.com/qryxip/cargo-linked"
readme = "README.md"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cargo = "0.38.0"
derive_more = "0.15.0"
failure = "0.1.5"
fixedbitset = "0.1.9"
if_chain = "1.0.0"
maplit = "1.0.2"
miniserde = "0.1.12"
once_cell = "1.1.0"
regex = "1.3.1"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.1"
termcolor = "1.0.5"
