[package]
name = "cargo-linked"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "List actually used crates."
repository = "https://github.com/qryxip/cargo-linked"
readme = "README.md"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ansi_term = "0.12.1"
cargo = "0.39.0"
derive_more = "0.15.0"
failure = "0.1.6"
fixedbitset = "0.2.0"
if_chain = "1.0.0"
maplit = "1.0.2"
miniserde = "0.1.12"
once_cell = "1.2.0"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
structopt = "0.3.3"
syn = { version = "1.0.5", features = ["full"] }
